@@ -1,3 +1,8 @@
+2017-03-09  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/79932
+	* gcc.target/i386/pr79932-1.c: New test.
+
 2017-03-09  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/79900 - ICE in strip_typedefs
